# adaptive-gradient-boosting-with-dynamic-feature-synthesis

./: .gitignore  FINAL_REPORT.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: ablation.yaml  default.yaml
models/: final_model.pkl  preprocessor.pkl
results/: evaluation_metrics.csv  evaluation_results.json  results.json  test_metrics.json
results/ablation/: test_metrics.json
results_ablation/: test_metrics.json  training_history.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_gradient_boosting_with_dynamic_feature_synthesis/: __init__.py
src/adaptive_gradient_boosting_with_dynamic_feature_synthesis/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_gradient_boosting_with_dynamic_feature_synthesis/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_gradient_boosting_with_dynamic_feature_synthesis/models/: __init__.py  components.py  model.py
src/adaptive_gradient_boosting_with_dynamic_feature_synthesis/training/: __init__.py  trainer.py
src/adaptive_gradient_boosting_with_dynamic_feature_synthesis/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
